Fixed the scrolling glitch on ios

--- a/src/app/events/events.page.scss
+++ b/src/app/events/events.page.scss
@@ -1,7 +1,3 @@
-ion-card.top {
-    margin-top: 20% !important;
-}
-
 ion-card.bottom {
     min-height: 50%;
 }
