--- a/src/global.scss
+++ b/src/global.scss
@@ -70,7 +70,7 @@ p {
 }
 
 div.heading {
-    position: fixed;
+   
     width: 100vw;
     z-index: 99999;
     background: white;
